--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -601,23 +601,29 @@ async function loadTasksForDate(selectedDate) {
         const startDate = parseLocalDate(dateRange[0]);
         const currentDate = parseLocalDate(selectedDate);
 
-        const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-        const defaultIndex = diffDays % userOrder.length;
-        const assumedTurn = userOrder[defaultIndex];
-
         const yesterday = new Date(currentDate);
         yesterday.setDate(yesterday.getDate() - 1);
         const yesterdayStr = yesterday.toISOString().split("T")[0];
-        const yesterdayTurnIndex = (defaultIndex - 1 + userOrder.length) % userOrder.length;
-        const yesterdayTurn = userOrder[yesterdayTurnIndex];
-
-        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
         const nowStr = new Date().toISOString().split("T")[0];
         const isPastDate = selectedDate < nowStr;
 
-        let currentTurn;
+        // Calculate current turn
+        let currentTurn = task.turn || userOrder[0]; // Use stored turn or default to first user
+        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+        const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
 
-        if (isPastDate) {
+        console.log(`Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}`);
+
+        if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
+            // If yesterday's turn wasn't completed, keep the same user
+            currentTurn = currentTurn;
+        } else if (!isPastDate) {
+            // Advance turn only if yesterday was completed
+            const currentIndex = userOrder.indexOf(currentTurn);
+            const nextIndex = (currentIndex + 1) % userOrder.length;
+            currentTurn = userOrder[nextIndex];
+        } else {
+            // For past dates, use completions on that day
             const thatDayCompletions = task.completions?.[selectedDate] || [];
             const counts = {};
             thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
@@ -627,12 +633,7 @@ async function loadTasksForDate(selectedDate) {
                     break;
                 }
             }
-            if (!currentTurn) currentTurn = userOrder[0]; // fallback
-        } else {
-            // Check if yesterday's turn was completed
-            const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === yesterdayTurn).length;
-            // If yesterday's user didn't complete their task, they remain the current turn
-            currentTurn = (yesterdayCompletedCount < repeatLimit && yesterdayTurn) ? yesterdayTurn : assumedTurn;
+            if (!currentTurn) currentTurn = userOrder[0];
         }
 
         const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
@@ -687,6 +688,191 @@ async function loadTasksForDate(selectedDate) {
         taskList.appendChild(taskDiv);
     });
 }
+
+async function showTaskDetails(task) {
+    const selectedDate = document.querySelector(".day.selected")?.dataset.date;
+    if (!selectedDate) return;
+
+    function parseLocalDate(dateStr) {
+        const [year, month, day] = dateStr.split("-").map(Number);
+        return new Date(year, month - 1, day);
+    }
+
+    const dateRange = task.date.split(" to ");
+    const startDate = parseLocalDate(dateRange[0]);
+    const currentDate = parseLocalDate(selectedDate);
+    const userOrder = [...task.users];
+
+    let repeatLimit = 1;
+    if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
+    if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
+    if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
+
+    const yesterday = new Date(currentDate);
+    yesterday.setDate(yesterday.getDate() - 1);
+    const yesterdayStr = yesterday.toISOString().split("T")[0];
+    const nowStr = new Date().toISOString().split("T")[0];
+    const isPastDate = selectedDate < nowStr;
+
+    // Calculate current turn
+    let currentTurn = task.turn || userOrder[0]; // Use stored turn or default
+    const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+    const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
+
+    console.log(`Modal - Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}`);
+
+    if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
+        // If yesterday's turn wasn't completed, keep the same user
+        currentTurn = currentTurn;
+    } else if (!isPastDate) {
+        // Advance turn only if yesterday was completed
+        const currentIndex = userOrder.indexOf(currentTurn);
+        const nextIndex = (currentIndex + 1) % userOrder.length;
+        currentTurn = userOrder[nextIndex];
+    } else {
+        // For past dates, use completions on that day
+        const thatDayCompletions = task.completions?.[selectedDate] || [];
+        const counts = {};
+        thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+        for (let i = 0; i < userOrder.length; i++) {
+            if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                currentTurn = userOrder[i];
+                break;
+            }
+        }
+        if (!currentTurn) currentTurn = userOrder[0];
+    }
+
+    const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+    const completedCount = completedUsers.length;
+
+    const nextIndex = (userOrder.indexOf(currentTurn) + 1) % userOrder.length;
+    const nextUser = userOrder[nextIndex];
+
+    let taskDetails = "";
+    if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
+    if (task.notes) taskDetails += `<strong>Notes:</strong> ${task.notes}<br>`;
+    if (task.room) taskDetails += `<strong>Room:</strong> ${task.room}<br>`;
+    if (task.repeat) {
+        taskDetails += `<strong>Frequency:</strong> ${task.repeat}`;
+        if (task.repeat === "Daily" && task.timesPerDay) taskDetails += ` - ${task.timesPerDay} time(s)/day`;
+        if (task.repeat === "Weekly" && task.timesPerWeek) taskDetails += ` - ${task.timesPerWeek} time(s)/week`;
+        if (task.repeat === "Monthly" && task.timesPerMonth) taskDetails += ` - ${task.timesPerMonth} time(s)/month`;
+        taskDetails += "<br>";
+    }
+    if (task.date) taskDetails += `<strong>Date:</strong> ${task.date}<br>`;
+    if (task.users?.length) taskDetails += `<strong>Users:</strong> ${task.users.join(", ")}<br>`;
+    if (task.reward && task.reward !== "0") taskDetails += `<strong>Reward:</strong> ${task.reward} 🍯<br>`;
+    taskDetails += `<strong>Current Turn:</strong> ${currentTurn}<br>`;
+    taskDetails += `<strong>Next:</strong> ${nextUser}<br>`;
+    taskDetails += `<strong>Completed:</strong> ${completedCount}/${repeatLimit}<br>`;
+
+    if (completedUsers.length > 0) {
+        taskDetails += `
+            <div style="margin-top: 8px;">
+                <strong>Completed by:</strong> ${completedUsers.join(", ")}
+                <button id="editCompletionBtn" style="margin-left: 10px; padding: 4px 8px; font-size: 12px; border-radius: 6px; background: var(--primary-color); color: var(--secondary-color); border: none; cursor: pointer;">Edit</button>
+            </div>
+        `;
+    }
+
+    taskDetails += `
+        <br>
+        <button id="editTurnBtn" style="padding: 6px 10px; background: var(--primary-color); color: var(--secondary-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Turn Order</button>
+        <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Task</button>
+    `;
+
+    const modal = document.createElement("div");
+    modal.className = "task-modal";
+    modal.innerHTML = `<div class="modal-content">${taskDetails}</div>`;
+    document.body.appendChild(modal);
+
+    modal.addEventListener("click", (e) => {
+        if (e.target.classList.contains("task-modal")) modal.remove();
+    });
+
+    document.getElementById("editTurnBtn").addEventListener("click", () => {
+        modal.remove();
+        showEditTurnModal(task);
+    });
+
+    document.getElementById("editTaskBtn").addEventListener("click", () => {
+        localStorage.setItem("familyApp_editTask", JSON.stringify(task));
+        localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date);
+        window.location.href = "/BeeMazing-Y1/mobile/3-Tasks/addtasks.html";
+    });
+
+    const editBtn = document.getElementById("editCompletionBtn");
+    if (editBtn) {
+        editBtn.addEventListener("click", (e) => {
+            e.stopPropagation();
+            modal.remove();
+            showEditCompletionModal(task, completedUsers, selectedDate, modal);
+        });
+    }
+}
+
+async function finishTask(userName, task, button, selectedDate) {
+    const today = selectedDate;
+
+    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+    if (!task.completions) task.completions = {};
+    if (!Array.isArray(task.completions[today])) task.completions[today] = [];
+
+    const userCompletions = task.completions[today].filter(u => u === userName).length;
+    if (userCompletions >= repeatLimit) return;
+
+    task.completions[today].push(userName);
+
+    const rewardAmount = Number(task.reward) || 0;
+    const userList = task.users;
+    let currentTurn = task.turn || userList[0];
+
+    // Update turn only if the task was completed enough times
+    const todayCompletions = task.completions[today].filter(u => u === currentTurn).length;
+    if (todayCompletions >= repeatLimit) {
+        const currentIndex = userList.indexOf(currentTurn);
+        const nextIndex = (currentIndex + 1) % userList.length;
+        task.turn = userList[nextIndex];
+    }
+
+    task.date = task.date; // Preserve original date range
+    await saveTaskToBackend(task);
+
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+    if (adminEmail && rewardAmount > 0) {
+        await fetch("https://beemazing.onrender.com/api/rewards", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ adminEmail, user: userName, amount: rewardAmount })
+        });
+    }
+
+    if (typeof triggerHoneyRain === 'function') triggerHoneyRain(rewardAmount);
+    if (typeof loadTasksForDate === 'function') loadTasksForDate(selectedDate);
+    if (typeof loadUserTasks === 'function') loadUserTasks(userName, selectedDate);
+    if (typeof loadUserReward === 'function') loadUserReward(userName);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
