Current Turn Task adaption #44

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -559,13 +559,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-
-
-
-
-
-
-
 async function loadTasksForDate(selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     if (!adminEmail) return;
@@ -597,7 +590,6 @@ async function loadTasksForDate(selectedDate) {
     }
 
     visibleTasks.forEach((task) => {
-        console.log('Raw task:', JSON.stringify(task, null, 2)); // Debug log
         const taskDiv = document.createElement("div");
         taskDiv.className = "task-item";
         taskDiv.dataset.taskTitle = task.title;
@@ -618,45 +610,35 @@ async function loadTasksForDate(selectedDate) {
         const yesterdayStr = yesterday.toISOString().split("T")[0];
         const nowStr = new Date().toISOString().split("T")[0];
         const isPastDate = selectedDate < nowStr;
-        const isFutureDate = selectedDate > nowStr;
 
         // Calculate current turn
         let currentTurn = task.turn || userOrder[0]; // Use stored turn or default to first user
-        let yesterdayCompletedCount = 0;
+        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+        const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
 
-        if (!isFutureDate) {
-            // For past or today, check actual completions
-            const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
-            yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
-            if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
-                // If yesterday's turn wasn't completed, keep the same user (for today)
-                currentTurn = currentTurn;
-            } else if (!isPastDate) {
-                // Advance turn for today if yesterday was completed
-                const currentIndex = userOrder.indexOf(currentTurn);
-                const nextIndex = (currentIndex + 1) % userOrder.length;
-                currentTurn = userOrder[nextIndex];
-            } else {
-                // For past dates, use completions on that day
-                const thatDayCompletions = task.completions?.[selectedDate] || [];
-                const counts = {};
-                thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
-                for (let i = 0; i < userOrder.length; i++) {
-                    if ((counts[userOrder[i]] || 0) < repeatLimit) {
-                        currentTurn = userOrder[i];
-                        break;
-                    }
-                }
-                if (!currentTurn) currentTurn = userOrder[0];
-            }
+        console.log(`Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}`);
+
+        if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
+            // If yesterday's turn wasn't completed, keep the same user
+            currentTurn = currentTurn;
+        } else if (!isPastDate) {
+            // Advance turn only if yesterday was completed
+            const currentIndex = userOrder.indexOf(currentTurn);
+            const nextIndex = (currentIndex + 1) % userOrder.length;
+            currentTurn = userOrder[nextIndex];
         } else {
-            // For future dates, assume all prior days (up to today) are completed
-            const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-            const defaultIndex = diffDays % userOrder.length;
-            currentTurn = userOrder[defaultIndex];
+            // For past dates, use completions on that day
+            const thatDayCompletions = task.completions?.[selectedDate] || [];
+            const counts = {};
+            thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+            for (let i = 0; i < userOrder.length; i++) {
+                if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                    currentTurn = userOrder[i];
+                    break;
+                }
+            }
+            if (!currentTurn) currentTurn = userOrder[0];
         }
-
-        console.log(`Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}, IsFuture: ${isFutureDate}`);
 
         const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
         const completedCount = completedUsers.length;
@@ -735,45 +717,35 @@ async function showTaskDetails(task) {
     const yesterdayStr = yesterday.toISOString().split("T")[0];
     const nowStr = new Date().toISOString().split("T")[0];
     const isPastDate = selectedDate < nowStr;
-    const isFutureDate = selectedDate > nowStr;
 
     // Calculate current turn
     let currentTurn = task.turn || userOrder[0]; // Use stored turn or default
-    let yesterdayCompletedCount = 0;
+    const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+    const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
 
-    if (!isFutureDate) {
-        // For past or today, check actual completions
-        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
-        yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
-        if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
-            // If yesterday's turn wasn't completed, keep the same user (for today)
-            currentTurn = currentTurn;
-        } else if (!isPastDate) {
-            // Advance turn for today if yesterday was completed
-            const currentIndex = userOrder.indexOf(currentTurn);
-            const nextIndex = (currentIndex + 1) % userOrder.length;
-            currentTurn = userOrder[nextIndex];
-        } else {
-            // For past dates, use completions on that day
-            const thatDayCompletions = task.completions?.[selectedDate] || [];
-            const counts = {};
-            thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
-            for (let i = 0; i < userOrder.length; i++) {
-                if ((counts[userOrder[i]] || 0) < repeatLimit) {
-                    currentTurn = userOrder[i];
-                    break;
-                }
-            }
-            if (!currentTurn) currentTurn = userOrder[0];
-        }
+    console.log(`Modal - Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}`);
+
+    if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
+        // If yesterday's turn wasn't completed, keep the same user
+        currentTurn = currentTurn;
+    } else if (!isPastDate) {
+        // Advance turn only if yesterday was completed
+        const currentIndex = userOrder.indexOf(currentTurn);
+        const nextIndex = (currentIndex + 1) % userOrder.length;
+        currentTurn = userOrder[nextIndex];
     } else {
-        // For future dates, assume all prior days (up to today) are completed
-        const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-        const defaultIndex = diffDays % userOrder.length;
-        currentTurn = userOrder[defaultIndex];
+        // For past dates, use completions on that day
+        const thatDayCompletions = task.completions?.[selectedDate] || [];
+        const counts = {};
+        thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+        for (let i = 0; i < userOrder.length; i++) {
+            if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                currentTurn = userOrder[i];
+                break;
+            }
+        }
+        if (!currentTurn) currentTurn = userOrder[0];
     }
-
-    console.log(`Modal - Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}, IsFuture: ${isFutureDate}`);
 
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const completedCount = completedUsers.length;
@@ -844,19 +816,6 @@ async function showTaskDetails(task) {
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 async function finishTask(userName, task, button, selectedDate) {
     const today = selectedDate;
 
@@ -901,8 +860,6 @@ async function finishTask(userName, task, button, selectedDate) {
     if (typeof loadUserTasks === 'function') loadUserTasks(userName, selectedDate);
     if (typeof loadUserReward === 'function') loadUserReward(userName);
 }
-
-
 
 
 
